# llamasearch

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  README_MLX.md  SECURITY.md  cli.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  run.py  run_llamafind.py  run_llamasearch.py  run_server.py  run_tests.py  searchengine.sh  setup.py  simple_server.py  test_api.py  test_basic.py  test_llamafind.py  test_llamafind_ultra.py  test_mlx_integration.py  test_mlx_simple.py  test_search_engines.py  tox.ini
config/: llamafind.toml
docs/: api.md  examples.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html  index.md
examples/: basic_usage.py
llamafind_ultra/: __init__.py
llamafind_ultra/agents/: __init__.py  base.py  chat_agent.py  finance_agent.py  search_agent.py
llamafind_ultra/core/: __init__.py  config.py  model.py
llamafind_ultra/search/: __init__.py  engine.py
llamafind_ultra/search/providers/: __init__.py  brave.py  google.py  perplexity.py
llamafind_ultra/server/: __init__.py  app.py
llamasearch/: __init__.py  client.py  main.py  utils.py
monitoring/: prometheus.yml
nginx/: default.conf
postman/: LlamaSearch_API_Collection.json  LlamaSearch_Environments.json  LlamaSearch_Production_Environment.json  LlamaSearch_Staging_Environment.json  README.md
public/: index.html
research_code_automation/: .env.example  Dockerfile  Makefile  README.md  SETUP.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.py  setup_env.py  tox.ini
research_code_automation/utils/: __init__.py  mlx_compat.py  pdf_processor.py
scripts/: init_project.sh  setup_env.sh
src/: index.css
src/llamasearch/: __init__.py  config.py  exceptions.py  main.py  models.py  run.py  run_llamafind.py  run_llamasearch.py  run_server.py  run_tests.py  simple_server.py  test_agent_api.py  test_api.py  test_llamafind.py  test_llamafind_ultra.py  test_mlx_simple.py  utils.py
tests/: __init__.py  test_agents.py  test_basic.py  test_client.py  test_main.py  test_mix_simple.py  test_search.py
