[tool.poetry]
name = "research-code-automation"
version = "0.1.0"
description = "Advanced research automation tool integrated with LlamaSearchAI"
Author: Nik Jois

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
pydantic = "^1.10.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
playwright = "^1.35.1"
PyPDF2 = "^3.0.1"
pytesseract = "^0.3.10"
nltk = "^3.8.1"
tqdm = "^4.65.0"
click = "^8.1.3"
click-help-colors = "^0.9.1"
PySimpleGUI = "^4.60.4"
openai = "^1.1.0"
arxiv = "^1.4.2"
pymed = "^1.4.0"
praw = "^7.8.0"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
sqlite-utils = "^3.37"
pybtex = "^0.24.0"
fake-useragent = "^1.1.1"
aiofiles = "^23.1.0"
colorama = "^0.4.6"
rich = "^13.4.2"
structlog = "^23.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 